# neurips-analyzer

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
docs/: .gitattributes  index.html  neurips.db
paper_list/: NIPS 2010 Events.csv  NIPS 2011 Events.csv  NIPS 2012 Events.csv  NIPS 2013 Events.csv  NIPS 2014 Events.csv  NIPS 2015 Events.csv  NIPS 2016 Events.csv  NIPS 2017 Events.csv  NIPS 2018 Events.csv  NeurIPS 2019 Events.csv  NeurIPS 2020 Events.csv  NeurIPS 2021 Events.csv  NeurIPS 2022 Events.csv  NeurIPS 2023 Events.csv  NeurIPS 2024 Events.csv  NeurIPS 2025 Events.csv
pipeline/: README.md  __init__.py  db.py  run.py  step1_load.py  step2_embed.py  step3_cluster.py  step4_describe.py  step5_umap.py  step6_web_db.py
tools/: cluster.py  cluster_naming.py  index.py  search.py  visualize.py  word_cloud.py
